--- a/notebooks/reference/conf/job_catalog/local.yml
+++ b/notebooks/reference/conf/job_catalog/local.yml
@@ -1,46 +1,63 @@
-jobs:
-  - name: data-cleaning
-    stages:
-        - name: 'clean-base-tables'
-          tasks:
-            - name: 'product'
-              params: {}
-            - name: 'orders'
-              params: {}
-            
-        - name: 'clean-derivative-tables'
-          tasks:
-            - name: 'sales'
-              params: {}
-        - name: 'train-test-split'
-          tasks:
-            - name: 'train-test'
-              params:
-                target: unit_price,
-                test_size: 0.2
-              
-  - name: feat-engg
-    stages:
-        - name: 'feature-pipelines'
-          tasks:
-            - name: 'transform-features'
-              params: 
-                outliers: 
-                  method: percentile
-                  lb: 0.01
-                  ub: 0.99
-                  drop: True
+datasets:
+  raw:
+    housing:
+      type: ds
+      format: csv
+      uri: ${core.data_base_path}/raw/housing/housing.csv
+      driver_params: {}
+  
+  cleaned:
+    housing:
+      type: ds
+      format: parquet
+      uri: ${core.data_base_path}/cleaned/housing/housing.parquet
+      driver_params: {}
 
-  - name: model-gen
-    stages:
-        - name: 'model-creation'
-          tasks:
-            - name: 'train-model'
-              params: {}
+  processed:
+    housing:
+      type: ds
+      format: parquet
+      uri: ${core.data_base_path}/processed/housing/housing.parquet
+      driver_params: {}
 
-  - name: model-eval
-    stages:
-        - name: 'model-predict'
-          tasks:
-            - name: 'score-model'
-              params: {}
+  train:
+    housing:
+      features:
+        type: ds
+        format: parquet
+        uri: ${core.data_base_path}/train/housing/features.parquet
+        driver_params:
+          save:
+            index: False
+      target:
+        type: ds
+        format: parquet
+        uri: ${core.data_base_path}/train/housing/target.parquet
+        driver_params:
+          save:
+            index: False
+  test:
+    housing:
+      features:
+        type: ds
+        format: parquet
+        uri: ${core.data_base_path}/test/housing/features.parquet
+        driver_params:
+          save:
+            index: False
+      target:
+        type: ds
+        format: parquet
+        uri: ${core.data_base_path}/test/housing/target.parquet
+        driver_params:
+          save:
+            index: False
+  score:
+    housing:
+      output:
+        type: ds
+        format: parquet
+        uri: ${core.data_base_path}/test/housing/scored_output.parquet
+        driver_params:
+          save:
+            index: False
